samples/_failures_safe/1761344896_295241_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fdf2ceb0.c: In function ‘main’:
./samples/SAFE/__tmp_fdf2ceb0.c:128:16: error: missing terminating " character
  128 |         printf("Invalid input
      |                ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_fdf2ceb0.c:128:9: error: expected expression at end of input
  128 |         printf("Invalid input
      |         ^~~~~~
./samples/SAFE/__tmp_fdf2ceb0.c:128:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fdf2ceb0.c:128:9: error: expected declaration or statement at end of input
